# ALICE-simulation

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Untitled.ipynb
src/: CMakeLists.txt  main.cpp
src/Entities/: CMakeLists.txt  entity-variants.hpp  entity.cpp  entity.hpp
src/Entities/particles/: KaonM.hpp  KaonP.hpp  PionM.hpp  PionP.hpp  ProtonM.hpp  ProtonP.hpp
src/Entities/resonances/: KaonS.hpp
src/Experiment/: CMakeLists.txt  experiment.hpp
src/Experiment/experiments/: kaonSDecay.hpp
src/Particle/: CMakeLists.txt  Particle.cpp  Particle.hpp
src/ParticleType/: CMakeLists.txt  ParticleType.cpp  ParticleType.hpp
src/ResonanceType/: CMakeLists.txt  ResonanceType.cpp  ResonanceType.hpp
tests/: CMakeCache.txt  CMakeLists.txt  lab.test.cpp
