CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

PROJECT(lab VERSION 1.0)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED True)

INCLUDE_DIRECTORIES(
        "${PROJECT_SOURCE_DIR}/src"
        "${PROJECT_SOURCE_DIR}/src/ParticleType"
        "${PROJECT_SOURCE_DIR}/src/ResonanceType"
        "${PROJECT_SOURCE_DIR}/src/Particle"
)

ADD_SUBDIRECTORY(src)

SET(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -g")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
