CMAKE_MINIMUM_REQUIRED(VERSION 3.11)

PROJECT(lab VERSION 1.0)

FIND_PACKAGE(ROOT REQUIRED)

SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

INCLUDE_DIRECTORIES(
        "${PROJECT_SOURCE_DIR}/src"
        "${PROJECT_SOURCE_DIR}/src/Entities"
        "${PROJECT_SOURCE_DIR}/src/Experiment"
        "${PROJECT_SOURCE_DIR}/dist"
)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(tests)

SET(GCC_COVERAGE_COMPILE_FLAGS "-Wall -Wextra -g")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS}")
